# MN_MACD

./: CMakeLists.txt  README.md  WIG20.txt  macd.cpp  macd.hpp  main.cpp  make_plots.py
